Using vlcj instead of java fx and mp3magic